--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,5 @@
 @use './vars.scss';
 @use './reset.scss';
-@use '../components/Button/style.scss';
+@use '../components/Button/style.scss' as button;
+@use '../components/Collapse/style.scss' as collapse;
+@use '../components/Icon/style.scss' as icon
