--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,4 +2,5 @@
 @use './reset.scss';
 @use '../components/Button/style.scss' as button;
 @use '../components/Collapse/style.scss' as collapse;
-@use '../components/Icon/style.scss' as icon
+@use '../components/Icon/style.scss' as icon;
+@use '../components/Alert/style.scss' as alert;
