--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,3 +4,4 @@
 @use '../components/Collapse/style.scss' as collapse;
 @use '../components/Icon/style.scss' as icon;
 @use '../components/Alert/style.scss' as alert;
+@use '../components/Tooltip/style.scss' as tooltip
