--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -6,3 +6,4 @@
 @use '../components/Alert/style.scss' as alert;
 @use '../components/Tooltip/style.scss' as tooltip;
 @use '../components/Dropdown/style.scss' as dropdown;
+@use '../components/Message/style.scss' as message
