--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -6,4 +6,5 @@
 @use '../components/Alert/style.scss' as alert;
 @use '../components/Tooltip/style.scss' as tooltip;
 @use '../components/Dropdown/style.scss' as dropdown;
-@use '../components/Message/style.scss' as message
+@use '../components/Message/style.scss' as message;
+@use '../components/Input/style.scss' as input;
