--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -8,3 +8,4 @@
 @use '../components/Dropdown/style.scss' as dropdown;
 @use '../components/Message/style.scss' as message;
 @use '../components/Input/style.scss' as input;
+@use '../components/Switch/style.scss' as switch;
