--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -9,3 +9,4 @@
 @use '../components/Message/style.scss' as message;
 @use '../components/Input/style.scss' as input;
 @use '../components/Switch/style.scss' as switch;
+@use '../components/Select/style.scss' as select;
