--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -10,3 +10,4 @@
 @use '../components/Input/style.scss' as input;
 @use '../components/Switch/style.scss' as switch;
 @use '../components/Select/style.scss' as select;
+@use '../components/Form/style.scss' as form;
